# poe2-build-validator

./: .gitignore  README.md  pyproject.toml
poe2_build_validator/: __init__.py  errors.py  models.py  validator.py
tests/: test_validator.py
tests/fixtures/: invalid_bad_fields.build  invalid_missing_name.build  valid_full.build  valid_minimal.build
